--- a/app/main.css
+++ b/app/main.css
@@ -18,3 +18,7 @@ body {
   background-color: #fdfdfd;
   box-shadow: 0 0 0.3em .03em rgba(0,0,0,.3);
 }
+.add-note {
+  background-color: #fdfdfd;
+  border: 1px solid #ccc;
+}
